Issue #647: Fix product tile visibility in related products grid

--- a/pub/css/product_detail_view.css
+++ b/pub/css/product_detail_view.css
@@ -76,7 +76,7 @@
 .product-controls button { float: right }
 
 .all-models { position: relative }
-.all-models h2 { display: none }
+.all-models h2.heading { display: none }
 
 /* Tablet */
 @media (max-width: 974px) {
